# deviceservice

./: Cargo.toml  Dockerfile  build.sh  crontab-crd.yaml  crontab-namespace.yaml  deviceservice-mtls.yaml  deviceservice-service.yaml  deviceservice.yaml  main.rs  my-crontab.yaml  test.sh
setup/: AksEdgeQuickStartForAio.ps1  agent-ext-service-config.yaml  akri-debug-echo-configuration.yaml  akri-onvif-video-configuration.yaml  ext-service-demo-debug-echo-dh.yaml  ext-service-demo-onvif-dh.yaml  mtls-test.yaml  new-agent-daemonset.yaml  new-agent-daemonset2.yaml  onvif-secret.yaml
setup/nginx/: Dockerfile  build.sh
src/: adrasset.rs  crontab.rs  lib.rs  restapihttpserver.rs
